--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@smui/data-table": "^7.0.0-beta.0",
 		"@smui/dialog": "^7.0.0-beta.0",
 		"@smui/drawer": "^7.0.0-beta.0",
+		"@smui/fab": "^7.0.0-beta.0",
 		"@smui/icon-button": "^7.0.0-beta.0",
 		"@smui/select": "^7.0.0-beta.0",
 		"@smui/textfield": "^7.0.0-beta.0",
