--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
 		"@smui/button": "^7.0.0-beta.0",
 		"@smui/card": "^7.0.0-beta.0",
 		"@smui/checkbox": "^7.0.0-beta.0",
+		"@smui/circular-progress": "^7.0.0-beta.0",
 		"@smui/data-table": "^7.0.0-beta.0",
 		"@smui/dialog": "^7.0.0-beta.0",
 		"@smui/drawer": "^7.0.0-beta.0",
 		"@smui/fab": "^7.0.0-beta.0",
 		"@smui/icon-button": "^7.0.0-beta.0",
+		"@smui/linear-progress": "^7.0.0-beta.0",
 		"@smui/select": "^7.0.0-beta.0",
 		"@smui/textfield": "^7.0.0-beta.0",
 		"@smui/top-app-bar": "^7.0.0-beta.0",
