--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@smui/icon-button": "^7.0.0-beta.0",
 		"@smui/linear-progress": "^7.0.0-beta.0",
 		"@smui/select": "^7.0.0-beta.0",
+		"@smui/snackbar": "^7.0.0-beta.8",
 		"@smui/textfield": "^7.0.0-beta.0",
 		"@smui/top-app-bar": "^7.0.0-beta.0",
 		"@sveltejs/adapter-auto": "^1.0.0",
